# StructForIndustry

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  sfi.code-workspace
.github/workflows/: contracts.yml
core/contracts/: CHANGELOG.md  README.md  hal_ipc.md  plugin_wire.md
core/contracts/abi/: hal_ipc.h  sfi.h
core/contracts/rust/sfi-abi/: Cargo.toml
core/contracts/rust/sfi-abi/src/: lib.rs
core/contracts/rust/sfi-contracts/: Cargo.toml  build.rs
core/contracts/rust/sfi-contracts/src/: lib.rs
core/contracts/rust/sfi-contracts/tests/: roundtrip.rs
core/contracts/schema/: README.md  buffer.capnp  bus.capnp  common.capnp  frame.capnp  manifest.capnp  result.capnp  sfi.capnp  sfi.capnp.c++  sfi.capnp.h  task.capnp
core/contracts/scripts/: validate-schemas.sh
core/core-bus/: Cargo.toml  README.md
core/core-bus/src/: audit.rs  bus.rs  config.rs  frame_store.rs  hal_ipc.rs  hal_listener.rs  lib.rs  mes.rs  metrics.rs  profile.rs  results.rs  scheduler.rs  spc.rs  spc_store.rs  ui.rs
core/core-bus/tests/: ai_infer_e2e.rs  bench_1080p.rs  hal_e2e.rs  phase3_e2e.rs  shm_defect_e2e.rs  vision_e2e.rs
core/hal-rs/: Cargo.toml  README.md  build.zig
core/hal-rs/src/: frame_pool.zig  ipc.zig  lib.rs  main.rs  main.zig  root.zig  synthetic.zig
core/math-kernel/: Project.toml  README.md
core/math-kernel/src/: SFIMathKernel.jl  components.jl  filter.jl  measure.jl  morphology.jl  stats.jl  template.jl  threshold.jl
core/math-kernel/test/: runtests.jl
core/plugin-host/: Cargo.toml  README.md
core/plugin-host/src/: in_process.rs  lib.rs  mock_ai_infer.rs  mock_defect_detect.rs  mock_vision.rs  out_process.rs  plugin_wire.rs  shm_gray8.rs  supervisor.rs
core/plugin-host/tests/: load_fake_plugin.rs
docs/: PHASES.md
docs/reports/: anomaly-reports.md  changeover.md  error-rates.md  illumination.md  latency.md
domains/aerospace-defense/: README.md  manifest.yaml
domains/aerospace-defense/profiles/: flight-control.yaml
domains/autonomous-robotics/: README.md  manifest.yaml
domains/autonomous-robotics/profiles/: vehicle-perception.yaml
domains/bio-medical/: README.md  manifest.yaml
domains/bio-medical/profiles/: clinical-imaging.yaml
domains/cloud-edge/: README.md  manifest.yaml
domains/cloud-edge/profiles/: edge-agent.yaml
domains/industrial-inspection/: README.md  manifest.yaml
domains/industrial-inspection/compliance/: audit-policy.yaml
domains/industrial-inspection/examples/aoi-line-demo/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  start.sh
domains/industrial-inspection/hal-ext/: README.md
domains/industrial-inspection/hal-ext/gige-capture/: Cargo.toml
domains/industrial-inspection/hal-ext/gige-capture/src/: gige.rs  main.rs
domains/industrial-inspection/hal-ext/line-frame/: Cargo.toml
domains/industrial-inspection/hal-ext/line-frame/src/: lib.rs
domains/industrial-inspection/hal-ext/line-publisher/: Cargo.toml
domains/industrial-inspection/hal-ext/line-publisher/src/: main.rs
domains/industrial-inspection/hal-ext/mindvision-capture/: Cargo.toml
domains/industrial-inspection/hal-ext/mindvision-capture/src/: main.rs  mindvision.rs
domains/industrial-inspection/hal-ext/modbus-plc-trigger/: Cargo.toml
domains/industrial-inspection/hal-ext/modbus-plc-trigger/src/: frame_source.rs  main.rs  modbus.rs
domains/industrial-inspection/hal-ext/opcua-plc-trigger/: Cargo.toml
domains/industrial-inspection/hal-ext/opcua-plc-trigger/src/: frame_source.rs  main.rs  opcua.rs
domains/industrial-inspection/hal-ext/plc-trigger/: Cargo.toml
domains/industrial-inspection/hal-ext/plc-trigger/src/: main.rs
domains/industrial-inspection/hal-ext/v4l2-capture/: Cargo.toml
domains/industrial-inspection/hal-ext/v4l2-capture/src/: capture.rs  main.rs
domains/industrial-inspection/plugins/defect-detect/: Project.toml  README.md  server.jl  server_impl.jl
domains/industrial-inspection/plugins/defect-detect/src/: SFIDefectDetect.jl  SFIVisionInspect.jl  SFIVisionMeasure.jl
domains/industrial-inspection/plugins/mes-reporter/: Cargo.toml
domains/industrial-inspection/plugins/mes-reporter/src/: main.rs
domains/industrial-inspection/plugins/spc-metrics/: Project.toml
domains/industrial-inspection/profiles/: lab-batch.yaml  line-infer.yaml  line-inspect-e2e.yaml  line-inspect.yaml  line-measure-dimension.yaml  line-measure-e2e.yaml  line-measure.yaml  line-realtime.yaml
domains/quant-finance/: README.md  manifest.yaml
domains/quant-finance/profiles/: hft-core.yaml
plugins/: README.md
plugins/ai-infer/: Cargo.toml  README.md  manifest.yaml
plugins/ai-infer/src/: anomaly.rs  bench_fixtures.rs  lib.rs  main.rs  onnx.rs
plugins/vision-2d/: Project.toml  README.md  manifest.yaml  server.jl  server_impl.jl
tools/: README.md
tools/fake-plugin/: Cargo.toml  README.md
tools/fake-plugin/src/: lib.rs
tools/fixtures/bench/: README.md
tools/fixtures/bench/defect/: center.gray8  defect_00.gray8  defect_01.gray8  defect_02.gray8
tools/fixtures/bench/ok/: 00.gray8  01.gray8  02.gray8  03.gray8  04.gray8  05.gray8  06.gray8  07.gray8  08.gray8  09.gray8  10.gray8  11.gray8  12.gray8  13.gray8  14.gray8  15.gray8  16.gray8  17.gray8  18.gray8  19.gray8  noisy_00.gray8  noisy_01.gray8  noisy_02.gray8  noisy_03.gray8  noisy_04.gray8  noisy_05.gray8  noisy_06.gray8  noisy_07.gray8  noisy_08.gray8  noisy_09.gray8
tools/fixtures/models/: anomaly-ok.json  tiny-defect.onnx
tools/scripts/: ai-infer-e2e.sh  anomaly-infer-e2e.sh  anomaly-reports.sh  bench-1080p-report.sh  bench-1080p.sh  bench-fixtures-generate.sh  docker-demo-smoke.sh  gen-feature-onnx.py  gen-tiny-onnx.py  gige-capture-e2e.sh  inspect-e2e.sh  julia-check.sh  local-contracts-smoke.sh  measure-e2e.sh  mindvision-capture-e2e.sh  modbus-plc-e2e.sh  modbus-v4l2-e2e.sh  onnx-infer-e2e.sh  opcua-plc-e2e.sh  phase1-smoke.sh  phase2-smoke.sh  plc-trigger-e2e.sh  setup-v4l2loopback.sh  shm-julia-e2e.sh  v4l2-capture-e2e.sh  v4l2-trigger-e2e.sh
tools/sfi-cli/: Cargo.toml  README.md
tools/sfi-cli/src/: main.rs
(+1 files in other folders)
