[package]
name = "sfi-core-bus"
version = "0.0.1"
description = "sfi-platform core message bus (apiVersion 0)"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sfi-bus"
path = "src/bin/sfi-bus.rs"

[dependencies]
axum = "0.8"
capnp = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sfi-contracts = { path = "../contracts/rust/sfi-contracts" }
sfi-plugin-host = { path = "../plugin-host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = "0.8"
sfi-plugin-host = { path = "../plugin-host" }
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
