[package]
name = "sfi-cli"
version = "0.0.1"
description = "sfi-platform CLI (apiVersion 0)"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sfi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
