[workspace]

[package]
name = "sfi-gige-capture"
version = "0.0.1"
description = "GigE industrial camera capture scaffold — mock + HAL publish (Phase 3)"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "sfi-gige-capture"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
sfi-core-bus = { path = "../../../../core/core-bus" }
sfi-line-frame = { path = "../line-frame" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
