[workspace]

[package]
name = "sfi-line-publisher"
version = "0.0.1"
description = "Industrial line trigger simulator — shm frame + HAL notify (Phase 3)"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "sfi-line-publisher"
path = "src/main.rs"

[dependencies]
sfi-core-bus = { path = "../../../../core/core-bus" }
sfi-line-frame = { path = "../line-frame" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
