[workspace]

[package]
name = "sfi-opcua-plc-trigger"
version = "0.0.1"
description = "OPC-UA boolean node poll → HAL frame publish (Phase 3 scaffold)"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "sfi-opcua-plc-trigger"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
sfi-core-bus = { path = "../../../../core/core-bus" }
sfi-line-frame = { path = "../line-frame" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
sfi-v4l2-capture = { path = "../v4l2-capture", default-features = false }
