[workspace]

[package]
name = "sfi-mes-reporter"
version = "0.0.1"
description = "Industrial inspection MES REST stub (Phase 3)"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "sfi-mes-reporter"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
